Adjustments to handle minimondex.